footer subscribe added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="mt-3">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#"><img src="images/icon.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
                             <a class="nav-link" href="#">Sign In</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link border rounded-pill px-5" href="#">Sign Up</a>
+                            <a class="nav-link rounded-pill px-5 sign-up" href="#">Sign Up</a>
                         </li>
                     </ul>
                 </div>
@@ -66,7 +66,7 @@
                     <p class="mt-4">Provide a network for all your needs with ease and fun using LaslesVPN discover
                         interesting
                         features from us.</p>
-                    <button class="bnt get-started-btn mt-5">Get Started</button>
+                    <button class="bnt get-started-btn mt-5 text-white">Get Started</button>
                 </div>
                 <div class="banner-image w-50">
                     <img class="w-100" src="images/banner/banner-1.png" alt="">
@@ -329,8 +329,80 @@
             </div>
         </section>
         <!-- Client Section End -->
+
+        <!-- Subscribe section start -->
+        <section class="pb-5">
+            <div class="container py-5 d-flex justify-content-around align-items-center bg-white">
+                <div class="subscribes-info">
+                    <h1>Subscribe Now for <br>Get Special Features!</h1>
+                    <p>Let's subscribe with us and find the fun.</p>
+                </div>
+                <div class="subscribe-button">
+                    <button class="btn subscribe-btn text-white">Subscribe Now</button>
+                </div>
+            </div>
+        </section>
+        <!-- Subscribe section end -->
     </main>
     <!-- Main Section End -->
+
+    <!-- Footer Section Start -->
+    <footer>
+        <div class="container py-5 d-flex justify-content-between">
+            <div class="footer-info">
+                <div class="logo">
+                    <img src="images/icon.png" alt="">
+                </div>
+                <div>
+                    <p class="py-4">LaslesVPN is a private virtual network that <br>has unique features and has high
+                        security.</p>
+                </div>
+                <div class="icons d-flex align-items-center">
+                    <div class="icon me-3 d-flex align-items-center justify-content-center rounded-circle">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    </div>
+                    <div class="icon me-3 d-flex align-items-center justify-content-center rounded-circle">
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="icon d-flex align-items-center justify-content-center rounded-circle">
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="services d-flex justify-content-between">
+                <div class="products">
+                    <h5 class="mb-4">Product</h5>
+                    <ul>
+                        <li class="mb-2"><a href="#">Download</a></li>
+                        <li class="mb-2"><a href="#">Pricing</a></li>
+                        <li class="mb-2"><a href="#">Locations</a></li>
+                        <li class="mb-2"><a href="#">Server</a></li>
+                        <li class="mb-2"><a href="#">Countries</a></li>
+                        <li class="mb-2"><a href="#">Blog</a></li>
+                    </ul>
+                </div>
+                <div class="engage">
+                    <h5 class="mb-4">Engage</h5>
+                    <ul>
+                        <li class="mb-2"><a href="#">LaslesVPN ?</a></li>
+                        <li class="mb-2"><a href="#">FAQ</a></li>
+                        <li class="mb-2"><a href="#">Tutorials</a></li>
+                        <li class="mb-2"><a href="#">About Us</a></li>
+                        <li class="mb-2"><a href="#">Privacy Policy</a></li>
+                        <li class="mb-2"><a href="#">Terms of Service</a></li>
+                    </ul>
+                </div>
+                <div class="earn-money">
+                    <h5 class="mb-4">Earn Money</h5>
+                    <ul>
+                        <li class="mb-2"><a href="#">Affiliate</a></li>
+                        <li class="mb-2"><a href="#">Become Partner</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer Section End -->
 
 
     <!-- bootstrap script link -->
