--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <div class="card h-100">
                             <img src="images/banner/banner-3.png" class="card-img-top w-50 m-auto mt-5" alt="...">
                             <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                                <h5 class="card-title my-4">Free Plan</h5>
+                                <h5 class="card-title">Free Plan</h5>
                                 <ul>
                                     <li class="my-3"><i class="fas fa-check"></i> Unlimited Bandwitch</li>
                                     <li class="my-3"><i class="fas fa-check"></i> Encrypted Connection
@@ -158,16 +158,16 @@
                         <div class="card h-100">
                             <img src="images/banner/banner-3.png" class="card-img-top w-50 m-auto mt-5" alt="...">
                             <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                                <h5 class="card-title my-4">Standard Plan
+                                <h5 class="card-title mt-5">Standard Plan
                                 </h5>
                                 <ul>
                                     <li class="my-3"><i class="fas fa-check"></i> Unlimited Bandwitch</li>
-                                    <li class="my-3"><i class="fas fa-check"></i> Encrypted Connection
+                                    <li class="mb-3"><i class="fas fa-check"></i> Encrypted Connection
                                     </li>
-                                    <li class="my-3"><i class="fas fa-check"></i> Yes Traffic Logs</li>
-                                    <li class="my-3"><i class="fas fa-check"></i> Works on All Devices
+                                    <li class="mb-3"><i class="fas fa-check"></i> Yes Traffic Logs</li>
+                                    <li class="mb-3"><i class="fas fa-check"></i> Works on All Devices
                                     </li>
-                                    <li class="my-3"><i class="fas fa-check"></i> Connect Anyware
+                                    <li class="mb-3"><i class="fas fa-check"></i> Connect Anyware
                                     </li>
                                 </ul>
                             </div>
@@ -181,17 +181,17 @@
                         <div class="card h-100">
                             <img src="images/banner/banner-3.png" class="card-img-top w-50 m-auto mt-5" alt="...">
                             <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                                <h5 class="card-title my-4">Premium Plan</h5>
+                                <h5 class="card-title mt-5">Premium Plan</h5>
                                 <ul>
                                     <li class="my-3"><i class="fas fa-check"></i> Unlimited Bandwitch</li>
-                                    <li class="my-3"><i class="fas fa-check"></i> Encrypted Connection
+                                    <li class="mb-3"><i class="fas fa-check"></i> Encrypted Connection
                                     </li>
-                                    <li class="my-3"><i class="fas fa-check"></i> No Traffic Logs</li>
-                                    <li class="my-3"><i class="fas fa-check"></i> Works on All Devices
+                                    <li class="mb-3"><i class="fas fa-check"></i> No Traffic Logs</li>
+                                    <li class="mb-3"><i class="fas fa-check"></i> Works on All Devices
                                     </li>
-                                    <li class="my-3"><i class="fas fa-check"></i> Connect Anyware
+                                    <li class="mb-3"><i class="fas fa-check"></i> Connect Anyware
                                     </li>
-                                    <li class="my-3"><i class="fas fa-check"></i> Get New Features
+                                    <li class="mb-3"><i class="fas fa-check"></i> Get New Features
                                     </li>
                                 </ul>
                             </div>
